# Prediberg

./: .env.example  .gitignore  Anchor.toml  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.json
app/: empty.ts  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/admin/: page.tsx
app/src/app/markets/[id]/: page.tsx
app/src/app/portfolio/: page.tsx
app/src/components/: Header.tsx  MarketCard.tsx  Providers.tsx
app/src/hooks/: useProgram.ts
app/src/lib/: mockData.ts  utils.ts
app/src/types/: index.ts
backend/: package.json
backend/src/: index.ts
backend/src/db/: index.ts  schema.ts
backend/src/routes/: markets.ts
chain/: Anchor.toml  package.json  tsconfig.json
chain/programs/prediberg/src/: lib.rs
chain/tests/: prediberg.ts
oracle/: package.json
oracle/src/: index.ts
oracle/src/judges/: index.ts  interface.ts  placeholder.ts
oracle/src/resolution/: index.ts  oracle-service.ts
oracle/src/sources/: index.ts  interface.ts
programs/: Anchor.toml  README.md  package.json
programs/prediberg/: Cargo.toml
programs/prediberg/src/: constants.rs  errors.rs
programs/prediberg/src/instructions/: claim_winnings.rs  create_market.rs
programs/prediberg/src/state/: position.rs
programs/programs/programs/: Cargo.toml
programs/programs/programs/src/: constants.rs  errors.rs  lib.rs
programs/programs/programs/src/instructions/: claim_winnings.rs  create_market.rs  initialize.rs  mod.rs  place_prediction.rs  redeem.rs  resolve_market.rs  swap.rs  withdraw_fees.rs
programs/programs/programs/src/state/: market.rs  mod.rs  position.rs  protocol.rs
programs/tests/: programs.ts
scripts/: deploy.ts
sdk/: package.json
sdk/src/: index.ts  program.ts
sdk/src/accounts/: index.ts
sdk/src/instructions/: index.ts
sdk/src/types/: index.ts
tests/: prediberg.ts
