[package]
name = "prediberg"
version = "0.1.0"
description = "Decentralized prediction market on Solana with AI-based outcome resolution"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "prediberg"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token_2022"] }
# Encrypt (FHE) integration — pre-alpha, enable when packages are published:
# encrypt-types  = { git = "https://github.com/dwallet-labs/encrypt-pre-alpha" }
# encrypt-dsl    = { package = "encrypt-solana-dsl", git = "https://github.com/dwallet-labs/encrypt-pre-alpha" }
# encrypt-anchor = { git = "https://github.com/dwallet-labs/encrypt-pre-alpha" }
# When enabled: replace yes_shares_ct/no_shares_ct (Pubkey) with EUint64 handles
# and wire the CPI calls in swap.rs and redeem.rs

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
