[package]
name = "prediberg"
version = "0.1.0"
description = "Decentralized prediction market on Solana with AI-based outcome resolution"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "prediberg"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token_2022"] }
# Pin blake3 < 1.8 — platform-tools v1.51 (Rust 1.84) can't build edition2024.
# Remove once platform-tools is updated to v1.52+ (Rust 1.85+).
blake3 = ">=1.5, <1.8"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
